--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
+# confluence 설정 파일
 confluence_config.py
+
+# python 캐시 디렉토리 (하위 포함)
+__pycache__/
+
+# os별 임시 파일
+.DS_Store
+Thumbs.db
+
+# 환경 파일
+.env
